// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Centered Between Sidebars [Custom Weights] matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "flexDirection": "row",
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          [
            {},
            {
              "flex": 2,
            },
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "red",
              "flex": 1,
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={
          [
            {},
            {
              "flex": 2,
            },
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "green",
              "flex": 1,
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={
          [
            {},
            {
              "flex": 2,
            },
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "red",
              "flex": 1,
            }
          }
        />
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Centered Between Sidebars [Default] matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "flexDirection": "row",
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          [
            {},
            {
              "flex": 1,
            },
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "red",
              "flex": 1,
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={
          [
            {},
            {
              "flex": 4,
            },
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "green",
              "flex": 1,
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={
          [
            {},
            {
              "flex": 1,
            },
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "red",
              "flex": 1,
            }
          }
        />
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Centered Between Sidebars [Styled Contents] matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "flexDirection": "row",
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          [
            {
              "borderColor": "yellow",
              "borderWidth": 2,
            },
            {
              "flex": 2,
            },
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "red",
              "flex": 1,
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={
          [
            {
              "borderColor": "blue",
              "borderWidth": 2,
            },
            {
              "flex": 2,
            },
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "green",
              "flex": 1,
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={
          [
            {
              "borderColor": "yellow",
              "borderWidth": 2,
            },
            {
              "flex": 2,
            },
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "red",
              "flex": 1,
            }
          }
        />
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Centered Between Sidebars [Vertical] matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "flexDirection": "column",
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          [
            {},
            {
              "flex": 1,
            },
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "red",
              "flex": 1,
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={
          [
            {},
            {
              "flex": 4,
            },
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "green",
              "flex": 1,
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={
          [
            {},
            {
              "flex": 1,
            },
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "red",
              "flex": 1,
            }
          }
        />
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
